--- a/.env
+++ b/.env
@@ -3,5 +3,5 @@ VITE_VUE_APP_MEPRIVATE=http://localhost:5173/
 VITE_VUE_APP_MEPUBLIC=http://localhost:5173/
 VITE_VUE_APP_MENAME=http://localhost:5173/
 VITE_VUE_APP_WEBHOST=http://localhost:5173/
-VITE_VUE_APP_MMBOTHOST=http://localhost:5173/
+VITE_VUE_APP_MMBOTHOST=http://localhost/
 VITE_VUE_APP_MMBOTPORT=16077
