--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 VITE_VUE_APP_MMBOTURL=http://localhost:5173/
-VITE_VUE_APP_MEPRIVATE=true
-VITE_VUE_APP_MEPUBLIC=false
+VITE_VUE_APP_MEPRIVATE=http://localhost:5173/
+VITE_VUE_APP_MEPUBLIC=http://localhost:5173/
 VITE_VUE_APP_MENAME=http://localhost:5173/
 VITE_VUE_APP_WEBHOST=http://localhost:5173/
 VITE_VUE_APP_MMBOTHOST=http://localhost:5173/
