--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 VITE_VUE_APP_MMBOTURL=http://localhost:5173/
-ME_PRIVATE=true
-ME_PUBLIC=false
+ME_PRIVATE=false
+ME_PUBLIC=true
 VITE_VUE_APP_MENAME=http://localhost:5173/
 VITE_VUE_APP_WEBHOST=http://localhost:5173/
 VITE_VUE_APP_MMBOTHOST=http://localhost:5173/
