--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 VITE_VUE_APP_MMBOTURL=http://localhost:5173/
-ME_PRIVATE=true
+ME_PRIVATE=false
 ME_PUBLIC=false
 VITE_VUE_APP_MENAME=http://localhost:5173/
 VITE_VUE_APP_WEBHOST=http://localhost:5173/
