--- a/package.json
+++ b/package.json
@@ -12,7 +12,6 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@mdi/font": "5.9.55",
     "axios": "^1.3.4",
     "pinia": "^2.0.32",
     "qrcode.vue": "^3.3.4",
@@ -23,13 +22,19 @@
     "webfontloader": "^1.0.0"
   },
   "devDependencies": {
+    "@mdi/font": "^7.2.96",
     "@rushstack/eslint-patch": "^1.2.0",
     "@vitejs/plugin-vue": "^4.0.0",
     "@vitejs/plugin-vue-jsx": "^3.0.0",
+    "@vue/compiler-sfc": "^3.3.4",
     "@vue/eslint-config-prettier": "^7.1.0",
+    "deepmerge": "^4.3.1",
     "eslint": "^8.34.0",
     "eslint-plugin-vue": "^9.9.0",
+    "fibers": "^5.0.3",
     "prettier": "^2.8.4",
+    "sass": "^1.68.0",
+    "sass-loader": "^13.3.2",
     "vite": "^4.1.4",
     "vite-plugin-vuetify": "^1.0.0-alpha.12",
     "vue-cli-plugin-vuetify": "~2.5.8"
