--- a/package.json
+++ b/package.json
@@ -12,7 +12,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "appwrite": "^13.0.0",
     "axios": "^1.3.4",
+    "coingecko": "^1.0.0",
+    "coingecko-api": "^1.0.10",
     "pinia": "^2.0.32",
     "qrcode.vue": "^3.3.4",
     "roboto-fontface": "*",
