--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "appwrite": "^13.0.0",
+    "appwrite-cli": "^4.1.0",
     "axios": "^1.3.4",
     "coingecko": "^1.0.0",
     "coingecko-api": "^1.0.10",
