--- a/package.json
+++ b/package.json
@@ -39,6 +39,8 @@
     "prettier": "^2.8.4",
     "sass": "^1.68.0",
     "sass-loader": "^13.3.2",
+    "ts-node": "^10.9.1",
+    "typescript": "^5.3.2",
     "vite": "^4.1.4",
     "vite-plugin-vuetify": "^1.0.0-alpha.12",
     "vue-cli-plugin-vuetify": "~2.5.8"
