--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "src/views/verus/verus-typescript-primitives"]
 	path = src/views/verus/verus-typescript-primitives
 	url = https://github.com/VerusCoin/verus-typescript-primitives/
+[submodule "verus-typescript-primitives"]
+	path = verus-typescript-primitives
+	url = https://github.com/VerusCoin/verus-typescript-primitives
