--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,6 +6,7 @@
       "esModuleInterop": true,
       "strict": true,
       "jsx": "preserve"
-    }
+    },
+    "exclude": ["node_modules", "build"]
   }
   
