--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-VITE_VUE_APP_MMBOTURL=http://localhost:5173/
+VITE_VUE_APP_MMBOTURL=http://localhost:5173
 VITE_VUE_APP_MEPRIVATE=http://localhost:5173/
 VITE_VUE_APP_MEPUBLIC=http://localhost:5173/
 VITE_VUE_APP_MENAME=http://localhost:5173/
